feat : 대시보드 링크 추가 및 파일 경로 수정